--- a/css/css.css
+++ b/css/css.css
@@ -1,8 +1,9 @@
 .frm1 {
 	text-align: center;
 }
-ul img {
-	height: 300px;
-	width: auto;
+.smallImg {
+	max-height: 300px;
 	max-width: 300px;
+	padding: 0;
+	margin: 0 auto;
 }
