--- a/css/css.css
+++ b/css/css.css
@@ -1,31 +1,44 @@
 body {
 	background-color: gray;
+	width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 form {
-	padding-bottom: 10px;
+	padding: 10px;
 }
 .frm1 {
 	text-align: center;
 }
 .smallImg {
-	height: 300px;
 	width: 300px;
+	height: 300px;
 	padding: 0;
-	margin: 0 2px;
+	margin: 0 auto;
 	border-radius: 15px;
 	border: 2px solid white;
+	display: inline;
 }
 .smallImg:hover {
 	border-color: blue;
 }
 #maxList {
-
-
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 32px;
+    left: 0;
+    overflow: auto;
 }
 #list {
-	margin-left: -155px;
-    margin-top: -145px;
-    position: absolute;
-    top: 50%;
-    left: 50%; 
+	width: 310px;
+	height: 310px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
 }
