--- a/css/css.css
+++ b/css/css.css
@@ -16,7 +16,7 @@ form {
 	width: 300px;
 	height: 300px;
 	padding: 0;
-	margin: 0 auto;
+	margin: 0 2px;
 	border-radius: 15px;
 	border: 2px solid white;
 	display: inline;
