--- a/css/css.css
+++ b/css/css.css
@@ -42,3 +42,13 @@ form {
 	left: 0;
 	margin: auto;
 }
+.viewPic {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,.7);
+	z-index: 50;
+	right: 0;
+	top: 0;
+	display: none;
+}
